--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="camera_x">CameraX</string>
-    <string name="camera">Kamera</string>
-    <string name="gallery">Galeri</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
     <string name="analyze">Analyze</string>
     <string name="result">The result of the analysis : </string>
+    <string name="result_here">Result Here</string>
     <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
     <string name="empty_image_warning">Please upload an image file first</string>
     <string name="no_result">No result found</string>
