--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">EatSight</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_history">History</string>
+    <string name="title_settings">Settings</string>
     <string name="camera_x">CameraX</string>
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
@@ -14,6 +14,6 @@
     <string name="no_result">No result found</string>
     <string name="result_with_confidence">Result: </string>
     <string name="title_app">Input you</string>
-    <string name="instruction_message">"Image Analysis for Cancer Detection"</string>
+    <string name="instruction_message">"Image Analysis for Your Food!!"</string>
     <string name="unknown_food">Unknown Food</string>
 </resources>
