--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">EatSight</string>
+    <string name="eatsight"><font color="#FF8C42">Eat</font><font color="#6D4C41">Sight</font></string>
     <string name="title_home">Home</string>
     <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
@@ -7,14 +8,14 @@
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
     <string name="analyze">Analyze</string>
-    <string name="result">The result of the analysis : </string>
+    <string name="result">Your result</string>
     <string name="result_here">Result Here</string>
     <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
     <string name="empty_image_warning">Please upload an image file first</string>
     <string name="no_result">No result found</string>
     <string name="result_with_confidence">Result: </string>
     <string name="title_app">Input you</string>
-    <string name="instruction_message">"Image Analysis for Your Food!!"</string>
+    <string name="instruction_message">"Ambil foto atau pilih gambar untuk mulai analisis!"</string>
     <string name="unknown_food">Unknown Food</string>
     <string name="timestamp">dd/mm/yyyy</string>
 
